# NLP-proekt

./: .env.example  .gitignore  AGENTS.md  PROJECT_STUDY_PAPER.md  README.md  pyproject.toml
configs/: evaluation.yaml  models.yaml  pipeline.yaml
data/eval_out/: generation_predictions.jsonl  retrieval_predictions.jsonl
data/eval_out/debug-task-clapnq/: retrieval_predictions.jsonl
data/eval_out/debug-task-fiqa/: retrieval_predictions.jsonl
data/eval_out/debug-task8/: generation_predictions.jsonl
data/eval_out/debug-task9/: generation_predictions.jsonl
data/eval_out/dev64_lastturn_focus/: retrieval_eval.jsonl  retrieval_eval_aggregate.csv  retrieval_input_resolved.jsonl  retrieval_input_sliced.jsonl  retrieval_predictions.jsonl
data/eval_out/dev64_rewrite_focus/: retrieval_eval.jsonl  retrieval_eval_aggregate.csv  retrieval_input_resolved.jsonl  retrieval_input_sliced.jsonl  retrieval_predictions.jsonl
docs/: architecture.md  pipeline.md
examples/: kg_build_sample.txt
scripts/: bootstrap_mtrag.py  inspect_kg.py
src/graphrag_pipeline/: __init__.py  cli.py  context.py  result.py  settings.py  types.py
study-paper/: README.md  benchmark-comparison.md  important-mtrag-files.md  pipeline-simple.md  progress.md  project-simple.md  results-simple.md
tests/: test_answering.py  test_answering_formatter.py  test_context.py  test_evaluation_runner.py  test_graph_models.py  test_kg_build.py  test_llm_client.py  test_mtrag_adapter.py  test_pipeline_runner.py  test_reasoning.py  test_standardization.py  test_subgraph_retrieval.py
(+132 files in other folders)
