[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graphrag-pipeline"
version = "0.1.0"
description = "Scaffold for a modular GraphRAG research pipeline"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Nikola Jagurinoski" },
  { name = "Darko Petrushevski" }
]
dependencies = [
  "kg-gen>=0.1.7",
  "networkx>=3.2",
  "pydantic>=2.6",
  "typer>=0.12",
  "rich>=13.7"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.3"
]

[project.scripts]
graphrag = "graphrag_pipeline.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
